Refactor: Continuing effort to cleardown non-assertj tests. Refactoring minor issues on the side.